    *sum:~*req.Field1
  * [SupplierS] SupplierS require a connection to rals when give
    AccountIDs and RatingPlanIDs to calculate
  * [SupplierS] In case of missing usage from Event use 1 minute as
    default value
  * [DataDB] Mongo support different marshaler than msgpack
  * [ConnManager] Fixed rpc_conns handling id with two connections and one of
    it *internal
  * [Replicator] Added Limit and StaticTTL otions for Items from
    DataDB/StorDB
  * [Migrator] Auto discover tenant from key instead of taking it from config
  * [Templates] Fixed missing "*" for strip and pading strategy
  * [DiameterAgent] Added RAR support
  * [Loader] Added support to load CSV files from URL
  * [Loader] Added configurable gapi_credentials
  * [Loader] Added configurable gapi_token
  * [Agents] Add authentication mechanism for Radius (PAP, CHAP,
    MSCHAPV2)
  * [SessionS] Update subflags for *rals ( *authorize and *initiate )
  * [AgentS] Uniformize flags (*auth -> *authorize)
  * [SessionS] Move *cost as subflag in *rals for
    SessionSv1.ProcessEvent

 -- Alexandru Tripon <alexandru.tripon@itsyscom.com>  Wed, 19 Feb 2020 13:25:52 +0200

cgrates (0.10.0) UNRELEASED; urgency=medium

  * Creating first stable branch. 

 -- DanB <danb@cgrates.org>  Thu, 6 Feb 2020 12:05:00 +0200

cgrates (0.9.1~rc8) UNRELEASED; urgency=medium

  * RC8.

 -- DanB <danb@cgrates.org>  Mon, 22 Sep 2015 12:05:00 +0200

cgrates (0.9.1~rc7) UNRELEASED; urgency=low

  * RC7.

 -- DanB <danb@cgrates.org>  Wed, 3 Aug 2015 14:04:00 -0600

cgrates (0.9.1~rc6) UNRELEASED; urgency=low

  * RC6.

 -- DanB <danb@cgrates.org>  Wed, 10 Sep 2014 13:30:00 +0100

cgrates (0.9.1~rc5) UNRELEASED; urgency=low

  * RC5.

 -- DanB <danb@cgrates.org>  Mon, 18 Aug 2014 13:30:00 +0100


cgrates (0.9.1~rc4) UNRELEASED; urgency=low

  * RC4.

 -- DanB <danb@cgrates.org>  Thu, 25 Mar 2014 17:30:00 +0100

cgrates (0.9.1~rc3) UNRELEASED; urgency=low

  * RC3.

 -- DanB <danb@cgrates.org>  Fri, 03 Jan 2014 17:37:31 +0100