@@ -45,6 +45,7 @@ type BiRPClient interface {
 	V1DisconnectSession(args utils.AttrDisconnectSession, reply *string) (err error)
 	V1GetActiveSessionIDs(ignParam string, sessionIDs *[]*SessionID) (err error)
 	V1ReAuthorize(originID string, reply *string) (err error)
+	V1DisconnectPeer(args *utils.DPRArgs, reply *string) (err error)
 }
 
 // getSessionTTL retrieves SessionTTL setting out of ev
