@@ -43,6 +43,7 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
   * [AgentS] Uniformize flags (*auth -> *authorize)
   * [SessionS] Move *cost as subflag in *rals for
     SessionSv1.ProcessEvent
+  * [DiameterAgent] Added DPR support
 
  -- Alexandru Tripon <alexandru.tripon@itsyscom.com>  Wed, 19 Feb 2020 13:25:52 +0200
 
